--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <div class="subheading mb-3">Front End Development</div>
                         <p>Solving problems related Front End of web application with Proficiency in Javascript and jQuery</p>
                     </div>
-
                 </div>
+                <a class="nav-link js-scroll-trigger" href="#contact"><img src="img/hire.jpg" alt=""></a>
 
             </div>
 
